# 0_CLOUD_CYBERFLY_PLATFORM_0

./: .gitattributes  .gitignore  CMakeLists.txt  KERNELS_AND_COMPONENTS.md  PERFORMANCE_IMPROVEMENTS_REPORT.md  PROCESS_FLOW.md  PROJECT_OVERVIEW.md  README.md  SECURITY_DESIGN.md
error_recovery_points/: 1d7e544a69175f03.json  942a89386856dee8.json
include/core/balancer/: EnergyController.hpp  LoadBalancer.hpp  TaskOrchestrator.hpp  TaskTypes.hpp
include/core/cache/: CacheConfig.hpp
include/core/cache/base/: AdaptiveCache.hpp
include/core/cache/dynamic/: DynamicCache.hpp  PlatformOptimizer.hpp
include/core/cache/experimental/: PreloadManager.hpp
include/core/cache/manager/: CacheManager.hpp  CacheSync.hpp
include/core/cache/metrics/: CacheMetrics.hpp
include/core/drivers/: ARMDriver.hpp
include/core/kernel/advanced/: ArchitecturalKernel.hpp  ComputationalKernel.hpp  CryptoMicroKernel.hpp  OrchestrationKernel.hpp  SmartKernel.hpp
include/core/kernel/base/: CoreKernel.hpp  MicroKernel.hpp  ParentKernel.hpp
include/core/recovery/: RecoveryManager.hpp
include/core/security/: CryptoKernel.hpp  SecurityManager.hpp
include/core/thread/: ThreadPool.hpp
kernel_recovery_points/: 9eecba0e34323863.json  b6d1352a85e9b34e.json
scripts/: run_all_tests.sh
secure_recovery_points/: 0603121d934e5dc0.json  32ac1d3238db54a2.json  47bfe05d3e154fcd.json  8dc88e7e0df05a70.json  dba1ecd39f60725e.json  fb53ace180a4128c.json
src/: main.cpp
src/core/balancer/: EnergyController.cpp  LoadBalancer.cpp
src/core/cache/base/: AdaptiveCache.cpp
src/core/cache/dynamic/: DynamicCache.cpp  PlatformOptimizer.cpp
src/core/cache/experimental/: PreloadManager.cpp
src/core/cache/manager/: CacheManager.cpp  CacheSync.cpp
src/core/cache/metrics/: CacheMetrics.cpp
src/core/kernel/advanced/: ArchitecturalKernel.cpp  ComputationalKernel.cpp  CryptoMicroKernel.cpp  OrchestrationKernel.cpp  SmartKernel.cpp
src/core/kernel/base/: CoreKernel.cpp  LoadBalancer.cpp  MicroKernel.cpp  ParentKernel.cpp  TunnelManager.cpp
src/core/recovery/: RecoveryManager.cpp
src/core/security/: CryptoKernel.cpp
src/core/thread/: ThreadPool.cpp
stress_recovery_points/: 065d98ee34095498.json  0931ac89af619647.json  0a7f1f1d851a83a6.json  0be3e436b34bb605.json  0bf49be100b15d5f.json  0f7294a82a8d982a.json  0f7fde18c25d5327.json  10c3573fe2c6ef17.json  1302769928f93856.json  159eca5159638f5b.json  161579d3032c3abf.json  19d382b7a0e7d967.json  1b789dfc8f1e3854.json  1c1597b54e899071.json  23f5a1a5727778a8.json  249fdaa38dd1594d.json  26783871354c8958.json  275d71b8573c7ed6.json  28c0f93db9b3de72.json  290930150c2d2f59.json  2ac94880586c3b0c.json  2afd0976c35f9440.json  2c21ea8862b26ddf.json  2f804fd486f19d29.json  30ced93dd4bd2a98.json  343bc19d670355ee.json  3855087840e922eb.json  391db58e9756c87c.json  3c161e040c550978.json  47c2cc1a3b8f6899.json  4fa47ec6680443b7.json  5652ecdf92c308bf.json  58b742855d05d4cb.json  5994c1b93087d8e7.json  59ee8f15ac82e9c0.json  5a8b5f8f77879264.json  611fb722e33de4e8.json  62c739929fb6f851.json  66bcbaf3ea327ee5.json  691c2e5872c91d77.json  (+60 more)
tests/core/balancer/: EnergyControllerSmokeTest.cpp  LoadBalancerSmokeTest.cpp  TaskOrchestratorSmokeTest.cpp
tests/core/cache/: AdaptiveCacheSmokeTest.cpp  CacheManagerSmokeTest.cpp  CacheSyncSmokeTest.cpp  DynamicCacheSmokeTest.cpp  PlatformOptimizerSmokeTest.cpp  PreloadManagerSmokeTest.cpp
tests/core/drivers/: ARMDriverSmokeTest.cpp
tests/core/e2e/: FullSystemE2ETest.cpp
tests/core/integration/: CacheKernelIntegrationTest.cpp  KernelLoadBalancerIntegrationTest.cpp  SecurityRecoveryIntegrationTest.cpp
tests/core/kernel/: ArchitecturalKernelSmokeTest.cpp  ComputationalKernelSmokeTest.cpp  CoreKernelSmokeTest.cpp  CryptoMicroKernelSmokeTest.cpp  KernelSmokeTest.cpp  SmartKernelSmokeTest.cpp
tests/core/recovery/: RecoveryManagerSmokeTest.cpp
tests/core/security/: CryptoKernelSmokeTest.cpp  SecurityManagerSmokeTest.cpp
tests/core/stress/: SystemStressTest.cpp
tests/core/thread/: ThreadPoolSmokeTest.cpp
tests/core/unit/: KernelUnitTest.cpp
